--- a/apps/base/nginx/helm-release.yaml
+++ b/apps/base/nginx/helm-release.yaml
@@ -14,6 +14,6 @@ spec:
         kind: HelmRepository
         name: bitnamicharts-repository
         namespace: flux-system
-      version: "*"
+      version: "18.1.4"
   interval: 30m0s
   releaseName: nginx-permanent
